[package]
name = "richter"
version = "0.1.0"
authors = ["Cormac O'Brien <cormac@c-obrien.org>"]
edition = "2021"

[dependencies]
arrayvec = "0.7"
bitflags = "2.2.1"
bumpalo = "3.4"
byteorder = "1.3"
cgmath = "0.18.0"
chrono = "0.4.0"
env_logger = "0.10.0"
failure = "0.1.8"
futures = "0.3.5"
lazy_static = "1.0.0"
log = "0.4.1"
nom = "7.1.3"
num = "0.4.0"
num-traits = "0.2.15"
num-derive = "0.3.3"
png = "0.17.8"
rand = { version = "0.8.5", features = ["small_rng"] }
regex = "1.8.1"
rodio = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shaderc = "0.8.2"
slab = "0.4"
structopt = "0.3.12"
strum = "0.18.0"
strum_macros = "0.18.0"
thiserror = "1.0"
uluru = "2"
wgpu = { version = "0.16.0", features = ["spirv"] }
winit = "0.28.3"

[profile.dev.package."*"]
opt-level = 3
